Bug 492961 - Crash [@ nsHTMLTableHeaderAccessible::GetRoleInternal(unsigned int*) ], r=davidb, r=MarcoZ, a192=beltzner